# mcstats

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  tasks.py
mcstats/: cache.py  config.py  connection.py  csv_export.py  display.py  scanner.py
tests/: test_core.py
